--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,10 @@ server.port=80
 
 spring.application.name=dsaprMusic
 
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:3306/${DATABASE_NAME}?characterEncoding=UTF8&userSSL=false&serverTimezone=Asia/Shanghai
-spring.datasource.username=${MYSQL_USER_NAME}
-spring.datasource.password=${MYSQL_PASSWORD}
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:3306/${DATABASE_NAME}?characterEncoding=UTF8&userSSL=false
+#spring.datasource.username=${MYSQL_USER_NAME}
+#spring.datasource.password=${MYSQL_PASSWORD}
+
+spring.datasource.url=jdbc:mysql://10.0.224.2:3306/dsapr-music?characterEncoding=UTF8&userSSL=false
+spring.datasource.username=root
+spring.datasource.password=Music2021
