--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,6 @@ spring.application.name=dsaprMusic
 #spring.datasource.username=${MYSQL_USER_NAME}
 #spring.datasource.password=${MYSQL_PASSWORD}
 
-spring.datasource.url=jdbc:mysql://10.0.224.2:3306/dsapr-music?characterEncoding=UTF8&userSSL=false
+spring.datasource.url=jdbc:mysql://sh-cynosdbmysql-grp-4ykopwnw.sql.tencentcdb.com:21064/dsapr-music?characterEncoding=UTF8&userSSL=false
 spring.datasource.username=root
 spring.datasource.password=Music2021
