--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,6 @@ server.port=80
 
 spring.application.name=dsaprMusic
 
-#spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:3306/${DATABASE_NAME}?characterEncoding=UTF8&userSSL=false
-#spring.datasource.username=${MYSQL_USER_NAME}
-#spring.datasource.password=${MYSQL_PASSWORD}
-
-spring.datasource.url=jdbc:mysql://sh-cynosdbmysql-grp-4ykopwnw.sql.tencentcdb.com:21064/dsapr-music?characterEncoding=UTF8&userSSL=false
-spring.datasource.username=root
-spring.datasource.password=Music2021
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:3306/${DATABASE_NAME}?characterEncoding=UTF8&userSSL=false
+spring.datasource.username=${MYSQL_USER_NAME}
+spring.datasource.password=${MYSQL_PASSWORD}
