--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.dsapr</groupId>
     <artifactId>dsapr-music</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>dsapr-music</name>
     <description>dsapr-music</description>
     <properties>
