--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,16 @@
-server.port=80
-
+server.port=${APPLICATION_PORT}
+spring.profiles.active=dev
 spring.application.name=dsaprMusic
 
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:3306/${DATABASE_NAME}?characterEncoding=UTF8&useSSL=false&serverTimezone=Asia/Shanghai
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:3306/${DATABASE_NAME}?characterEncoding=UTF8&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=Asia/Shanghai
 #spring.datasource.url=jdbc:mysql://10.0.224.2:3306/dsapr-music?characterEncoding=UTF8&useSSL=false&serverTimezone=Asia/Shanghai
-spring.datasource.username=root
-spring.datasource.password=Music2021
+spring.datasource.username=${MYSQL_USER_NAME}
+spring.datasource.password=${MYSQL_PASSWORD}
+#spring.datasource.password=Music2021
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# ??ddl?????
+spring.jpa.generate-ddl=false
+spring.flyway.enabled=true
+
+spring.config.import=optional:file:.env[.properties]
