--- a/src/test/resource/application.properties
+++ b/src/test/resource/application.properties
@@ -8,7 +8,8 @@ spring.sql.init.platform=h2
 spring.h2.console.enabled=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
-#spring.flyway.enabled=false
+# ?? flyway
+spring.flyway.enabled=false
 spring.jpa.show-sql=true
 spring.jpa.properties.format_sql=true
 #spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
