feat: add jwt authorization

--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,23 @@
             <version>1.4.2.Final</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.18.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>4.5.15</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -78,12 +95,12 @@
         </plugins>
     </build>
 
-<!--    <annotationProcessorPaths>-->
-<!--        <path>-->
-<!--            <groupId>org.projectlombok</groupId>-->
-<!--            <artifactId>lombok</artifactId>-->
-<!--            <version>1.18.22</version>-->
-<!--        </path>-->
-<!--    </annotationProcessorPaths>-->
+    <!--    <annotationProcessorPaths>-->
+    <!--        <path>-->
+    <!--            <groupId>org.projectlombok</groupId>-->
+    <!--            <artifactId>lombok</artifactId>-->
+    <!--            <version>1.18.22</version>-->
+    <!--        </path>-->
+    <!--    </annotationProcessorPaths>-->
 
 </project>
