--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,4 +13,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.generate-ddl=false
 spring.flyway.enabled=true
 
-spring.config.import=optional:file:.env[.properties]
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
