--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.jpa.generate-ddl=false
 spring.flyway.enabled=true
 
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+
+weixin.mp.app-id=wxa792f0fccf095c80
+weixin.mp.app-secret=891dd1a7bb1e0410ddbb0dd637b630f9
