--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,8 @@ spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 
 weixin.mp.app-id=wxa792f0fccf095c80
 weixin.mp.app-secret=891dd1a7bb1e0410ddbb0dd637b630f9
+
+cos.bucket=${COS_BUCKET}
+cos.secret-id=${COS_SECRET_ID}
+cos.secret-key=${COS_SECRET_KEY}
+cos.region=${COS_REGION}
