--- a/src/test/resource/application.properties
+++ b/src/test/resource/application.properties
@@ -12,7 +12,15 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.flyway.enabled=false
 spring.jpa.show-sql=true
 spring.jpa.properties.format_sql=true
-#spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
-#springfox.documentation.swagger-ui.enabled=false
-#weixin.mp.app-id=wx030595dc70528923
-#weixin.mp.app-secret=86c4ac09699da2c70145ebafb3c9a7b4
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+springfox.documentation.swagger-ui.enabled=false
+
+spring.config.import=optional:file:.env[.properties]
+
+weixin.mp.app-id=wxa792f0fccf095c80
+weixin.mp.app-secret=891dd1a7bb1e0410ddbb0dd637b630f9
+
+cos.bucket=${COS_BUCKET}
+cos.secret-id=${COS_SECRET_ID}
+cos.secret-key=${COS_SECRET_KEY}
+cos.region=${COS_REGION}
